Correct button and order summary margin alignment

--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap");
 
-html, body {
-    height: 100%;
-    margin: 0;
-    font-family: Red Hat Display, Arial, Helvetica, sans-serif;
-    background-image: url('./images/pattern-background-mobile.svg');
-    background-color: hsl(225, 100%, 94%);
-    background-repeat: no-repeat;
-    background-size: 100%;
-
-    
+html,
+body {
+  height: 100%;
+  margin: 0;
+  font-family: Red Hat Display, Arial, Helvetica, sans-serif;
+  background-image: url("./images/pattern-background-mobile.svg");
+  background-color: hsl(225, 100%, 94%);
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
-h1, h2 {
+h1,
+h2 {
   margin: 0;
 }
 h1 {
@@ -32,22 +32,22 @@ a {
 }
 
 .order-summary-container {
- display: flex;
- flex-direction: column;
- justify-content: center;
- align-items: center;
- text-align: center;
- max-width: 350px;
- background-color: white;
- border-radius: 1em;
- overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  max-width: 350px;
+  background-color: white;
+  border-radius: 1em;
+  overflow: hidden;
 }
 
 .order-hero {
- justify-self: flex-end;
- align-self: center;
- flex-basis: content;
- min-width: 100%;
+  justify-self: flex-end;
+  align-self: center;
+  flex-basis: content;
+  min-width: 100%;
 }
 
 .order-summary-text {
@@ -55,17 +55,18 @@ a {
 }
 
 .plan-title {
-    font-size: 1em;
-    font-weight: 700;
+  font-size: 1em;
+  font-weight: 700;
 }
 
-.order-description, .price {
-    color: hsl(224, 23%, 55%);
-    font-size: 1em;
-    line-height: 1.8em;
-    padding: 0 2em;
-    letter-spacing: 0.03em;
-    font-weight: 500;
+.order-description,
+.price {
+  color: hsl(224, 23%, 55%);
+  font-size: 1em;
+  line-height: 1.8em;
+  padding: 0 1em;
+  letter-spacing: 0.03em;
+  font-weight: 500;
 }
 
 .order-description {
@@ -73,13 +74,13 @@ a {
 }
 
 .plan-selected {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background-color: hsl(225, 100%, 98%);
-    margin: 1.5rem 1.5rem 0 1.5rem;
-    padding: 1rem;
-    border-radius: 1em;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: hsl(225, 100%, 98%);
+  margin: 1.5rem 1.5rem 0 1.5rem;
+  padding: 1rem;
+  border-radius: 1em;
 }
 
 .change-plan {
@@ -97,12 +98,12 @@ a {
 }
 
 .order-buttons {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 1rem;
-    margin: 1.5rem 0;
-    font-weight: 00;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 1rem;
+  margin: 1.5rem 1.5rem;
+  font-weight: 700;
 }
 
 .payment-button {
@@ -110,7 +111,6 @@ a {
   background-color: hsl(245, 75%, 52%);
   padding: 1rem 3rem;
   border-radius: 0.8rem;
-  margin: 0 2rem;
   font-weight: 700;
   box-shadow: 0 20px 15px hsl(225, 100%, 94%);
 }
@@ -120,9 +120,9 @@ a {
 }
 
 .cancel-button {
-    margin: 1rem 2rem;
-    color: hsl(224, 23%, 55%);
-    font-weight: 700;
+  margin: 1rem 2rem;
+  color: hsl(224, 23%, 55%);
+  font-weight: 700;
 }
 
 .cancel-button:hover {
@@ -149,10 +149,10 @@ footer {
 }
 
 @media (min-width: 500px) {
-  html, body {
-  background-image: url('./images/pattern-background-desktop.svg');
-  background-position: top;
-
+  html,
+  body {
+    background-image: url("./images/pattern-background-desktop.svg");
+    background-position: top;
   }
   .order-summary-container {
     max-width: 400px;
@@ -162,10 +162,14 @@ footer {
     position: relative;
   }
 
-  .change-plan {
-  position: absolute;
-  right: 0;
-  margin-right: 1.5rem;
+  .plan-selected,
+  .order-buttons {
+    margin: 2rem;
   }
 
+  .change-plan {
+    position: absolute;
+    right: 0;
+    margin-right: 1.5rem;
+  }
 }
